<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:paddingStart="@dimen/cocktail_details_margin_start"
    android:paddingEnd="@dimen/cocktail_details_margin_end"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ingredient_image"
        android:layout_width="50dp"
        android:layout_height="@dimen/ingredients_amount_row_height"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ingredient_image_description" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ingredients_amount_row_height"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/favorite_not_selected"
            android:text="@string/ingredients_name"
            android:textSize="15sp"
            android:ellipsize="end"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/ingredient_alternatives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/ingredients_optional"
            android:textSize="14sp" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/ingredient_in_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:layout_gravity="center_vertical"
        android:background="@drawable/checkbox_square"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn="" />
</LinearLayout>